--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h3>Bachelors in Computer Science from SK Somaiya college,Vidyavihar(E) with CGPA of 6.9</h3>
             <h3>HSC(12th) from Ramnarain Ruia College,Matunga(E) with 63% </h3>
             <h3>SSC(10th) from Michael High School,Kurla(W) with 75% </h3>
-            <p class="contact-message">You can contact me through mail [shanitiwari29031998@gmail.com]</p>
+            <p class="contact-message">You can contact me through mail</p>
             <a class="btn" href="mailto:shanitiwari29031998@gmail.com">CONTACT ME</a>
         </div>
     </div>
